--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ag-grid-angular": "^26.2.0",
     "ag-grid-community": "^26.2.0",
     "bootstrap": "^5.1.3",
+    "file-save": "^0.2.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
     "ngx-papaparse": "^5.0.0",
