--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/forms": "~8.2.14",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
+    "jwt-decode": "^3.1.2",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "ag-grid-angular": "^26.2.0",
