--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "e5356c72-df55-481d-83d9-be8c97ef2d98"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
