--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
     "@angular/forms": "~8.2.14",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
-    "jwt-decode": "^3.1.2",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "ag-grid-angular": "^26.2.0",
     "ag-grid-community": "^26.2.0",
     "bootstrap": "^5.1.3",
-    "file-save": "^0.2.0",
+    "file-saver": "^2.0.5",
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
+    "jwt-decode": "^3.1.2",
     "ngx-papaparse": "^5.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
