--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
     "@angular/material": "^8.2.3",
+    "@angular/material-moment-adapter": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
@@ -29,6 +30,8 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "ngx-papaparse": "^5.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.4.0",
